--- a/Finance-LR-1115.ipynb
+++ b/Finance-LR-1115.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#判定贷款用户是否逾期\" data-toc-modified-id=\"判定贷款用户是否逾期-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>判定贷款用户是否逾期</a></span></li><li><span><a href=\"#数据集预览\" data-toc-modified-id=\"数据集预览-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>数据集预览</a></span></li><li><span><a href=\"#特征处理\" data-toc-modified-id=\"特征处理-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>特征处理</a></span></li><li><span><a href=\"#数据划分\" data-toc-modified-id=\"数据划分-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>数据划分</a></span></li><li><span><a href=\"#模型训练\" data-toc-modified-id=\"模型训练-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>模型训练</a></span></li><li><span><a href=\"#模型评估\" data-toc-modified-id=\"模型评估-6\"><span class=\"toc-item-num\">6&nbsp;&nbsp;</span>模型评估</a></span></li><li><span><a href=\"#遇到的问题\" data-toc-modified-id=\"遇到的问题-7\"><span class=\"toc-item-num\">7&nbsp;&nbsp;</span>遇到的问题</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-8\"><span class=\"toc-item-num\">8&nbsp;&nbsp;</span>Reference</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#判定贷款用户是否逾期\" data-toc-modified-id=\"判定贷款用户是否逾期-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>判定贷款用户是否逾期</a></span><ul class=\"toc-item\"><li><span><a href=\"#数据集预览\" data-toc-modified-id=\"数据集预览-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>数据集预览</a></span></li><li><span><a href=\"#特征处理\" data-toc-modified-id=\"特征处理-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>特征处理</a></span><ul class=\"toc-item\"><li><span><a href=\"#删除无用特征\" data-toc-modified-id=\"删除无用特征-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>删除无用特征</a></span></li><li><span><a href=\"#字符型特征-编码\" data-toc-modified-id=\"字符型特征-编码-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>字符型特征-编码</a></span></li><li><span><a href=\"#缺失特征\" data-toc-modified-id=\"缺失特征-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>缺失特征</a></span></li></ul></li><li><span><a href=\"#数据集划分\" data-toc-modified-id=\"数据集划分-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>数据集划分</a></span></li><li><span><a href=\"#模型训练---LR\" data-toc-modified-id=\"模型训练---LR-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>模型训练 - LR</a></span></li><li><span><a href=\"#模型评估\" data-toc-modified-id=\"模型评估-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>模型评估</a></span></li></ul></li><li><span><a href=\"#遇到的问题\" data-toc-modified-id=\"遇到的问题-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>遇到的问题</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Reference</a></span></li></ul></div>"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数据集预览"
+    "## 数据集预览"
    ]
   },
   {
@@ -287,6 +287,7 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -298,8 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 特征处理\n",
-    "\n",
+    "## 特征处理\n",
     "\n",
     "> 无用特征删除、字符型特征编码和缺失值填充。"
    ]
@@ -308,8 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>\n",
-    "**删除无用特征**"
+    "###  删除无用特征"
    ]
   },
   {
@@ -340,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data.drop(['first_transaction_time', 'latest_query_time', 'loans_latest_time'], axis=1, inplace=True)"
@@ -350,8 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>\n",
-    "**字符型特征-编码**"
+    "### 字符型特征-编码"
    ]
   },
   {
@@ -407,8 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'>\n",
-    "**缺失特征**"
+    "### 缺失特征"
    ]
   },
   {
@@ -503,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for feature in data.columns:\n",
@@ -517,15 +518,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> 'Unnamed: 0', 'custid', 'trade_no', 'bank_card_no', 'source'都没用, 'id_name'表示姓名, 没用？\n",
+    "'Unnamed: 0', 'custid', 'trade_no', 'bank_card_no', 'source'都没用, 'id_name'表示姓名, 没用？\n",
     "\n",
-    "> 'take_amount_in_later_12_month_highest'数值跨度可能较大, 归一化？\n",
+    "'take_amount_in_later_12_month_highest'数值跨度可能较大, 归一化？\n",
     "\n",
-    "> 某些特征可能包含缺失值NAN\n",
+    "某些特征可能包含缺失值NAN\n",
     "\n",
-    "> 'reg_preference_for_trad'需要编码\n",
+    "'reg_preference_for_trad'需要编码\n",
     "\n",
-    "> 'latest_query_time', 'loans_latest_time'为日期特征"
+    "'latest_query_time', 'loans_latest_time'为日期特征"
    ]
   },
   {
@@ -534,7 +535,7 @@
     "collapsed": true
    },
    "source": [
-    "# 数据划分"
+    "## 数据集划分"
    ]
   },
   {
@@ -551,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 划分训练集测试集\n",
@@ -575,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 模型训练"
+    "## 模型训练 - LR"
    ]
   },
   {
@@ -643,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 模型评估"
+    "## 模型评估"
    ]
   },
   {
@@ -718,7 +721,9 @@
    "source": [
     "1) pd.read_csv读取文件时，utf-8的编码问题。\n",
     "\n",
-    "解决方法：reference1"
+    "解决方法：reference1\n",
+    "\n",
+    "2) 特征处理, 有待完善"
    ]
   },
   {
