LR - features to be improved

--- a/Finance-LR-1115.ipynb
+++ b/Finance-LR-1115.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "scrolled": true
@@ -502,9 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for feature in data.columns:\n",
@@ -540,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -551,18 +549,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "# 划分训练集测试集\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "X = data[features]\n",
     "y = data.status\n",
@@ -583,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -595,19 +592,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'C': 0.1, 'penalty': 'l1'} 0.788698527202\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr = LogisticRegression()\n",
     "lr_param = {'penalty': ('l1', 'l2'), 'C': [0.0001,0.001,0.01,0.1,1,10,100,1000]}\n",
@@ -620,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +621,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -662,15 +651,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "准确性：\n",
-      "训练集：0.7995 测试集：0.8024\n"
+      "[准确性] 训练集： 0.799519086264 测试集： 0.802382620883\n"
      ]
     }
    ],
@@ -679,22 +667,21 @@
     "y_train_pred = lr.predict(X_train)\n",
     "y_test_pred = lr.predict(X_test)\n",
     "\n",
-    "print('准确性：')\n",
-    "print('训练集：{:.4f}'.format(accuracy_score(y_train, y_train_pred)), end = ' ')\n",
-    "print('测试集：{:.4f}'.format(accuracy_score(y_test, y_test_pred)))"
+    "print('[准确性]', end = ' ')\n",
+    "print('训练集：',accuracy_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', accuracy_score(y_test, y_test_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1_score：\n",
-      "训练集：0.4677 测试集：0.4639\n"
+      "[准确性] 训练集： 0.467677573823 测试集： 0.463878326996\n"
      ]
     }
    ],
@@ -703,9 +690,9 @@
     "y_train_pred = lr.predict(X_train)\n",
     "y_test_pred = lr.predict(X_test)\n",
     "\n",
-    "print('f1_score：')\n",
-    "print('训练集：{:.4f}'.format(f1_score(y_train, y_train_pred)), end = ' ')\n",
-    "print('测试集：{:.4f}'.format(f1_score(y_test, y_test_pred)))"
+    "print('[准确性]', end = ' ')\n",
+    "print('训练集：',f1_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', f1_score(y_test, y_test_pred))"
    ]
   },
   {
