Baseline - LR/SVM/DecisionTree - features to be improved

--- a/Finance.ipynb
+++ b/Finance.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#判定贷款用户是否逾期\" data-toc-modified-id=\"判定贷款用户是否逾期-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>判定贷款用户是否逾期</a></span><ul class=\"toc-item\"><li><span><a href=\"#数据集预览\" data-toc-modified-id=\"数据集预览-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>数据集预览</a></span></li><li><span><a href=\"#特征处理\" data-toc-modified-id=\"特征处理-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>特征处理</a></span><ul class=\"toc-item\"><li><span><a href=\"#删除无用特征\" data-toc-modified-id=\"删除无用特征-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>删除无用特征</a></span></li><li><span><a href=\"#字符型特征-编码\" data-toc-modified-id=\"字符型特征-编码-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>字符型特征-编码</a></span></li><li><span><a href=\"#缺失特征\" data-toc-modified-id=\"缺失特征-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>缺失特征</a></span></li></ul></li><li><span><a href=\"#数据集划分\" data-toc-modified-id=\"数据集划分-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>数据集划分</a></span></li><li><span><a href=\"#模型训练---LR\" data-toc-modified-id=\"模型训练---LR-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>模型训练 - LR</a></span></li><li><span><a href=\"#模型评估\" data-toc-modified-id=\"模型评估-1.5\"><span class=\"toc-item-num\">1.5&nbsp;&nbsp;</span>模型评估</a></span></li></ul></li><li><span><a href=\"#遇到的问题\" data-toc-modified-id=\"遇到的问题-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>遇到的问题</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Reference</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#判定贷款用户是否逾期\" data-toc-modified-id=\"判定贷款用户是否逾期-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>判定贷款用户是否逾期</a></span><ul class=\"toc-item\"><li><span><a href=\"#数据集预览\" data-toc-modified-id=\"数据集预览-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>数据集预览</a></span></li><li><span><a href=\"#特征处理\" data-toc-modified-id=\"特征处理-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>特征处理</a></span><ul class=\"toc-item\"><li><span><a href=\"#删除无用特征\" data-toc-modified-id=\"删除无用特征-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>删除无用特征</a></span></li><li><span><a href=\"#字符型特征-编码\" data-toc-modified-id=\"字符型特征-编码-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>字符型特征-编码</a></span></li><li><span><a href=\"#缺失值处理\" data-toc-modified-id=\"缺失值处理-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>缺失值处理</a></span></li></ul></li><li><span><a href=\"#模型选择\" data-toc-modified-id=\"模型选择-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>模型选择</a></span><ul class=\"toc-item\"><li><span><a href=\"#数据集划分\" data-toc-modified-id=\"数据集划分-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>数据集划分</a></span></li></ul></li><li><span><a href=\"#模型训练和评估\" data-toc-modified-id=\"模型训练和评估-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>模型训练和评估</a></span><ul class=\"toc-item\"><li><span><a href=\"#LR模型\" data-toc-modified-id=\"LR模型-1.4.1\"><span class=\"toc-item-num\">1.4.1&nbsp;&nbsp;</span>LR模型</a></span></li><li><span><a href=\"#SVM模型\" data-toc-modified-id=\"SVM模型-1.4.2\"><span class=\"toc-item-num\">1.4.2&nbsp;&nbsp;</span>SVM模型</a></span></li><li><span><a href=\"#决策树模型\" data-toc-modified-id=\"决策树模型-1.4.3\"><span class=\"toc-item-num\">1.4.3&nbsp;&nbsp;</span>决策树模型</a></span></li></ul></li></ul></li><li><span><a href=\"#遇到的问题\" data-toc-modified-id=\"遇到的问题-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>遇到的问题</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Reference</a></span></li></ul></div>"
    ]
   },
   {
@@ -287,12 +287,64 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'custid', 'trade_no', 'bank_card_no',\n",
+       "       'low_volume_percent', 'middle_volume_percent',\n",
+       "       'take_amount_in_later_12_month_highest',\n",
+       "       'trans_amount_increase_rate_lately', 'trans_activity_month',\n",
+       "       'trans_activity_day', 'transd_mcc', 'trans_days_interval_filter',\n",
+       "       'trans_days_interval', 'regional_mobility', 'student_feature',\n",
+       "       'repayment_capability', 'is_high_user', 'number_of_trans_from_2011',\n",
+       "       'first_transaction_time', 'historical_trans_amount',\n",
+       "       'historical_trans_day', 'rank_trad_1_month', 'trans_amount_3_month',\n",
+       "       'avg_consume_less_12_valid_month', 'abs',\n",
+       "       'top_trans_count_last_1_month', 'avg_price_last_12_month',\n",
+       "       'avg_price_top_last_12_valid_month', 'reg_preference_for_trad',\n",
+       "       'trans_top_time_last_1_month', 'trans_top_time_last_6_month',\n",
+       "       'consume_top_time_last_1_month', 'consume_top_time_last_6_month',\n",
+       "       'cross_consume_count_last_1_month',\n",
+       "       'trans_fail_top_count_enum_last_1_month',\n",
+       "       'trans_fail_top_count_enum_last_6_month',\n",
+       "       'trans_fail_top_count_enum_last_12_month',\n",
+       "       'consume_mini_time_last_1_month',\n",
+       "       'max_cumulative_consume_later_1_month',\n",
+       "       'max_consume_count_later_6_month',\n",
+       "       'railway_consume_count_last_12_month',\n",
+       "       'pawns_auctions_trusts_consume_last_1_month',\n",
+       "       'pawns_auctions_trusts_consume_last_6_month',\n",
+       "       'jewelry_consume_count_last_6_month', 'status', 'source',\n",
+       "       'first_transaction_day', 'trans_day_last_12_month', 'id_name',\n",
+       "       'apply_score', 'apply_credibility', 'query_org_count',\n",
+       "       'query_finance_count', 'query_cash_count', 'query_sum_count',\n",
+       "       'latest_query_time', 'latest_one_month_apply',\n",
+       "       'latest_three_month_apply', 'latest_six_month_apply', 'loans_score',\n",
+       "       'loans_credibility_behavior', 'loans_count', 'loans_settle_count',\n",
+       "       'loans_overdue_count', 'loans_org_count_behavior',\n",
+       "       'consfin_org_count_behavior', 'loans_cash_count',\n",
+       "       'latest_one_month_loan', 'latest_three_month_loan',\n",
+       "       'latest_six_month_loan', 'history_suc_fee', 'history_fail_fee',\n",
+       "       'latest_one_month_suc', 'latest_one_month_fail', 'loans_long_time',\n",
+       "       'loans_latest_time', 'loans_credit_limit', 'loans_credibility_limit',\n",
+       "       'loans_org_count_current', 'loans_product_count', 'loans_max_limit',\n",
+       "       'loans_avg_limit', 'consfin_credit_limit', 'consfin_credibility',\n",
+       "       'consfin_org_count_current', 'consfin_product_count',\n",
+       "       'consfin_max_limit', 'consfin_avg_limit', 'latest_query_day',\n",
+       "       'loans_latest_day'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# data.columns"
+    "data.columns"
    ]
   },
   {
@@ -407,27 +459,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 缺失特征"
+    "### 缺失值处理"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "student_feature -- 63.0626840555\n"
+      "low_volume_percent -- 0.0420698359276 %\n",
+      "middle_volume_percent -- 0.0420698359276 %\n",
+      "trans_amount_increase_rate_lately -- 0.0631047538915 %\n",
+      "trans_activity_month -- 0.0420698359276 %\n",
+      "trans_activity_day -- 0.0420698359276 %\n",
+      "transd_mcc -- 0.0420698359276 %\n",
+      "trans_days_interval_filter -- 0.168279343711 %\n",
+      "trans_days_interval -- 0.0420698359276 %\n",
+      "regional_mobility -- 0.0420698359276 %\n",
+      "student_feature -- 63.0626840555 %\n",
+      "number_of_trans_from_2011 -- 0.0420698359276 %\n",
+      "historical_trans_day -- 0.0420698359276 %\n",
+      "rank_trad_1_month -- 0.0420698359276 %\n",
+      "avg_consume_less_12_valid_month -- 0.0420698359276 %\n",
+      "top_trans_count_last_1_month -- 0.0420698359276 %\n",
+      "avg_price_top_last_12_valid_month -- 2.18763146824 %\n",
+      "trans_top_time_last_1_month -- 0.168279343711 %\n",
+      "trans_top_time_last_6_month -- 0.168279343711 %\n",
+      "consume_top_time_last_1_month -- 0.168279343711 %\n",
+      "consume_top_time_last_6_month -- 0.168279343711 %\n",
+      "cross_consume_count_last_1_month -- 8.96087505259 %\n",
+      "trans_fail_top_count_enum_last_1_month -- 0.336558687421 %\n",
+      "trans_fail_top_count_enum_last_6_month -- 0.336558687421 %\n",
+      "trans_fail_top_count_enum_last_12_month -- 0.336558687421 %\n",
+      "consume_mini_time_last_1_month -- 0.546907867059 %\n",
+      "max_consume_count_later_6_month -- 0.168279343711 %\n",
+      "railway_consume_count_last_12_month -- 0.252419015566 %\n",
+      "jewelry_consume_count_last_6_month -- 0.252419015566 %\n",
+      "first_transaction_day -- 0.0420698359276 %\n",
+      "trans_day_last_12_month -- 0.0420698359276 %\n",
+      "apply_score -- 6.394615061 %\n",
+      "apply_credibility -- 6.394615061 %\n",
+      "query_org_count -- 6.394615061 %\n",
+      "query_finance_count -- 6.394615061 %\n",
+      "query_cash_count -- 6.394615061 %\n",
+      "query_sum_count -- 6.394615061 %\n",
+      "latest_one_month_apply -- 6.394615061 %\n",
+      "latest_three_month_apply -- 6.394615061 %\n",
+      "latest_six_month_apply -- 6.394615061 %\n",
+      "loans_score -- 6.24737063525 %\n",
+      "loans_credibility_behavior -- 6.24737063525 %\n",
+      "loans_count -- 6.24737063525 %\n",
+      "loans_settle_count -- 6.24737063525 %\n",
+      "loans_overdue_count -- 6.24737063525 %\n",
+      "loans_org_count_behavior -- 6.24737063525 %\n",
+      "consfin_org_count_behavior -- 6.24737063525 %\n",
+      "loans_cash_count -- 6.24737063525 %\n",
+      "latest_one_month_loan -- 6.24737063525 %\n",
+      "latest_three_month_loan -- 6.24737063525 %\n",
+      "latest_six_month_loan -- 6.24737063525 %\n",
+      "history_suc_fee -- 6.24737063525 %\n",
+      "history_fail_fee -- 6.24737063525 %\n",
+      "latest_one_month_suc -- 6.24737063525 %\n",
+      "latest_one_month_fail -- 6.24737063525 %\n",
+      "loans_long_time -- 6.24737063525 %\n",
+      "loans_credit_limit -- 6.24737063525 %\n",
+      "loans_credibility_limit -- 6.24737063525 %\n",
+      "loans_org_count_current -- 6.24737063525 %\n",
+      "loans_product_count -- 6.24737063525 %\n",
+      "loans_max_limit -- 6.24737063525 %\n",
+      "loans_avg_limit -- 6.24737063525 %\n",
+      "consfin_credit_limit -- 6.24737063525 %\n",
+      "consfin_credibility -- 6.24737063525 %\n",
+      "consfin_org_count_current -- 6.24737063525 %\n",
+      "consfin_product_count -- 6.24737063525 %\n",
+      "consfin_max_limit -- 6.24737063525 %\n",
+      "consfin_avg_limit -- 6.24737063525 %\n",
+      "latest_query_day -- 6.394615061 %\n",
+      "loans_latest_day -- 6.24737063525 %\n"
      ]
     }
    ],
    "source": [
     "for feature in data.columns:\n",
     "    summ = data[feature].isnull().sum()\n",
-    "    if summ*100/4754 > 50:\n",
-    "        print(feature, '--', summ*100/4754)"
+    "    if summ:\n",
+    "        print(feature, '--', summ*100/4754, '%')"
    ]
   },
   {
@@ -508,7 +628,6 @@
     "for feature in data.columns:\n",
     "    summ = data[feature].isnull().sum()\n",
     "    if summ:\n",
-    "        print(feature)\n",
     "        data[feature].fillna(data[feature].mean(), inplace = True)"
    ]
   },
@@ -533,12 +652,19 @@
     "collapsed": true
    },
    "source": [
-    "## 数据集划分"
+    "## 模型选择"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 数据集划分"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -549,10 +675,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -575,19 +699,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 模型训练 - LR"
+    "## 模型训练和评估"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "### LR模型"
    ]
   },
   {
@@ -598,6 +717,8 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
     "lr = LogisticRegression()\n",
     "lr_param = {'penalty': ('l1', 'l2'), 'C': [0.0001,0.001,0.01,0.1,1,10,100,1000]}\n",
     "\n",
@@ -627,15 +748,10 @@
     }
    ],
    "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "lr = LogisticRegression()\n",
     "lr.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 模型评估"
    ]
   },
   {
@@ -646,30 +762,50 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, f1_score"
+    "clf = lr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[准确性] 训练集： 0.799519086264 测试集： 0.802382620883\n"
+      "[准确性] 训练集： 0.799519086264 测试集： 0.802382620883\n",
+      "[f1-score] 训练集： 0.467677573823 测试集： 0.463878326996\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
     "# 准确性\n",
-    "y_train_pred = lr.predict(X_train)\n",
-    "y_test_pred = lr.predict(X_test)\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
     "\n",
     "print('[准确性]', end = ' ')\n",
-    "print('训练集：',accuracy_score(y_train, y_train_pred), end = ' ')\n",
-    "print('测试集：', accuracy_score(y_test, y_test_pred))"
+    "print('训练集：', accuracy_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', accuracy_score(y_test, y_test_pred))\n",
+    "\n",
+    "# f1_score\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('[f1-score]', end = ' ')\n",
+    "print('训练集：',f1_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', f1_score(y_test, y_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM模型"
    ]
   },
   {
@@ -678,19 +814,134 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma=0.1, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svc = SVC(C=1.0, kernel='rbf', gamma=0.1)\n",
+    "svc.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "clf = svc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[准确性] 训练集： 0.467677573823 测试集： 0.463878326996\n"
+      "[准确性] 训练集： 0.991283438533 测试集： 0.756131744919\n",
+      "[f1-score] 训练集： 0.982434887947 测试集： 0.0386740331492\n"
      ]
     }
    ],
    "source": [
-    "# f1_score\n",
-    "y_train_pred = lr.predict(X_train)\n",
-    "y_test_pred = lr.predict(X_test)\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "# 准确性\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
     "\n",
     "print('[准确性]', end = ' ')\n",
+    "print('训练集：', accuracy_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', accuracy_score(y_test, y_test_pred))\n",
+    "\n",
+    "# f1_score\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('[f1-score]', end = ' ')\n",
+    "print('训练集：',f1_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', f1_score(y_test, y_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 决策树模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=4,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "clf = DecisionTreeClassifier(max_depth=4)\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[准确性] 训练集： 0.792004809137 测试集： 0.773651016118\n",
+      "[f1-score] 训练集： 0.470948012232 测试集： 0.387096774194\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 准确性\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('[准确性]', end = ' ')\n",
+    "print('训练集：',accuracy_score(y_train, y_train_pred), end = ' ')\n",
+    "print('测试集：', accuracy_score(y_test, y_test_pred))\n",
+    "\n",
+    "# f1_score\n",
+    "y_train_pred = clf.predict(X_train)\n",
+    "y_test_pred = clf.predict(X_test)\n",
+    "\n",
+    "print('[f1-score]', end = ' ')\n",
     "print('训练集：',f1_score(y_train, y_train_pred), end = ' ')\n",
     "print('测试集：', f1_score(y_test, y_test_pred))"
    ]
