--- a/Finance2 - DataPreprocessing.ipynb
+++ b/Finance2 - DataPreprocessing.ipynb
@@ -1532,7 +1532,7 @@
    },
    "outputs": [],
    "source": [
-    "X = pd.concat([X_cate, X_num], axis=1)"
+    "X = pd.concat([X_cate, X_date, X_num], axis=1)"
    ]
   },
   {
@@ -1543,7 +1543,7 @@
     {
      "data": {
       "text/plain": [
-       "(4754, 78)"
+       "(4754, 87)"
       ]
      },
      "execution_count": 33,
