--- a/Finance2.1 - DataPreprocessing.ipynb
+++ b/Finance2.1 - DataPreprocessing.ipynb
@@ -24,7 +24,7 @@
     "给定金融数据，预测贷款用户是否会逾期。\n",
     "（status是标签：0表示未逾期，1表示逾期。）\n",
     "\n",
-    "**Task5（特征工程1）** - 数据类型转换, 无用特征删除, 缺失值处理（尝试不同的填充看效果）及数据探索"
+    "**Task5（特征工程1 - 数据预处理）** - 数据类型转换, 无用特征删除, 缺失值处理（尝试不同的填充看效果）及数据探索"
    ]
   },
   {
@@ -59,17 +59,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -472,17 +472,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -656,14 +656,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "regional_mobility 6 [ 3.  4.  1.  2.  5. nan]\n",
-      "student_feature 3 [nan  1.  2.]\n",
+      "regional_mobility 6 [  3.   4.   1.   2.   5.  nan]\n",
+      "student_feature 3 [ nan   1.   2.]\n",
       "is_high_user 2 [0 1]\n",
-      "avg_consume_less_12_valid_month 13 [ 7.  5.  6.  8.  9.  3.  4. 11. 10.  0.  2.  1. nan]\n",
-      "top_trans_count_last_1_month 9 [0.15 0.05 0.65 1.   0.1  0.3  0.4  0.2   nan]\n",
+      "avg_consume_less_12_valid_month 13 [  7.   5.   6.   8.   9.   3.   4.  11.  10.   0.   2.   1.  nan]\n",
+      "top_trans_count_last_1_month 9 [ 0.15  0.05  0.65  1.    0.1   0.3   0.4   0.2    nan]\n",
       "reg_preference_for_trad 6 ['一线城市' '三线城市' '境外' '二线城市' '其他城市' nan]\n",
-      "railway_consume_count_last_12_month 7 [ 0.  1.  2.  4. nan  3. 30.]\n",
-      "jewelry_consume_count_last_6_month 8 [ 0.  1. nan  2.  6.  3.  4.  5.]\n"
+      "railway_consume_count_last_12_month 7 [  0.   1.   2.   4.  nan   3.  30.]\n",
+      "jewelry_consume_count_last_6_month 8 [  0.   1.  nan   2.   6.   3.   4.   5.]\n"
      ]
     }
    ],
@@ -717,17 +717,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -972,17 +972,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -1125,17 +1125,17 @@
      "data": {
       "text/html": [
        "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
