--- a/Finance4 - ModelFusion.ipynb
+++ b/Finance4 - ModelFusion.ipynb
@@ -433,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sclf = StackingClassifier(classifiers=[svm_linear, svm_poly, svm_rbf, \n",
@@ -487,7 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sclf = StackingClassifier(classifiers=[svm_linear, svm_poly, svm_rbf, svm_sigmoid, dt, xgb, lgb], \n",
