Output the result of Feature Selection

--- a/Finance3 - ModelAdjustPara.ipynb
+++ b/Finance3 - ModelAdjustPara.ipynb
@@ -690,7 +690,7 @@
    ],
    "source": [
     "param = {'max_depth':range(3,14,2), 'min_samples_split':range(100,801,200)}\n",
-    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=8,min_samples_split=300,min_samples_leaf=20, max_features='sqrt'),\n",
+    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=8,min_samples_split=300,min_samples_leaf=20, max_features='sqrt',random_state =2333),\n",
     "                       param_grid = param,scoring ='roc_auc', cv=5)\n",
     "\n",
     "gsearch.fit(X_train, y_train)\n",
@@ -723,7 +723,7 @@
    ],
    "source": [
     "param = {'min_samples_split':range(50,1000,100), 'min_samples_leaf':range(60,101,10)}\n",
-    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=11,min_samples_split=100,min_samples_leaf=20, max_features='sqrt'),\n",
+    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=11,min_samples_split=100,min_samples_leaf=20, max_features='sqrt', random_state =2333),\n",
     "                       param_grid = param,scoring ='roc_auc', cv=5)\n",
     "\n",
     "gsearch.fit(X_train, y_train)\n",
@@ -756,7 +756,7 @@
    ],
    "source": [
     "param = {'max_features':range(7,20,2)}\n",
-    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=11,min_samples_split=550,min_samples_leaf=80, max_features='sqrt'),\n",
+    "gsearch = GridSearchCV(DecisionTreeClassifier(max_depth=11,min_samples_split=550,min_samples_leaf=80, max_features='sqrt', random_state =2333),\n",
     "                       param_grid = param,scoring ='roc_auc', cv=5)\n",
     "\n",
     "gsearch.fit(X_train, y_train)\n",
@@ -779,7 +779,7 @@
     }
    ],
    "source": [
-    "dt = DecisionTreeClassifier(max_depth=11,min_samples_split=550,min_samples_leaf=80,max_features=19)\n",
+    "dt = DecisionTreeClassifier(max_depth=11,min_samples_split=550,min_samples_leaf=80,max_features=19, random_state =2333)\n",
     "dt.fit(X_train, y_train)\n",
     "model_metrics(dt, X_train, X_test, y_train, y_test)"
    ]
