Update StackingClassifier of Final.ipynb

--- a/Finance5 - Final.ipynb
+++ b/Finance5 - Final.ipynb
@@ -638,8 +638,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.在融合的时候需要对模型进行筛选\n",
+    "\n",
+    "2.StackingClassifier的参数设置\n",
+    "\n",
+    ">如果average_probas=True，则对分类器的结果求平均，得到：p=[0.25,0.45,0.35]\n",
+    "\n",
+    ">如果average_probas=False，则分类器的所有结果都保留作为新的特征：p=[0.2,0.5,0.3,0.3,0.4,0.4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "average_probas尝试True后, 效果更好。其次, 决策树和svm_poly单模型效果并不好, 尝试去掉两者后再Stacking"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -662,33 +682,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sclf = StackingClassifier(classifiers=[svm_linear, svm_poly, svm_rbf, svm_sigmoid, dt, xgb, lgb], \n",
-    "                            meta_classifier=lr, use_probas=True,average_probas=False)"
+    "sclf = StackingClassifier(classifiers=[lr, svm_linear, svm_rbf, xgb, lgb], \n",
+    "                            meta_classifier=lr, use_probas=True,average_probas=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[准确率] 训练集： 0.8323 测试集： 0.7912\n",
-      "[auc值] 训练集： 0.8750 测试集： 0.7773\n"
+      "[准确率] 训练集： 0.8161 测试集： 0.7821\n",
+      "[auc值] 训练集： 0.8556 测试集： 0.7861\n"
      ]
     }
    ],
    "source": [
     "sclf.fit(X_train, y_train.values)\n",
     "model_metrics(sclf, X_train, X_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stacking调参\n",
+    "\n",
+    "https://www.jianshu.com/p/48d1962679f5"
    ]
   },
   {
@@ -711,7 +740,8 @@
     "|svm_sigmoid|C = 0.01|训练集： 0.7660 测试集： 0.7590|\n",
     "|决策树|max_depth=9,min_samples_split=100,min_samples_leaf=90, max_features=9|训练集： 0.7721 测试集： 0.6946|\n",
     "|XGBoost|learning_rate =0.1, n_estimators=60, max_depth=3, min_child_weight=11, gamma=0, subsample=0.7,colsample_bytree=0.8|训练集： 0.8710 测试集： 0.7780|\n",
-    "|LightGBM|learning_rate =0.1, n_estimators=50, max_depth=3, min_child_weight=7, gamma=0, subsample=0.5, colsample_bytree=0.8|训练集： 0.8741 测试集： 0.7746|"
+    "|LightGBM|learning_rate =0.1, n_estimators=50, max_depth=3, min_child_weight=7, gamma=0, subsample=0.5, colsample_bytree=0.8|训练集： 0.8741 测试集： 0.7746|\n",
+    "|Stacking|-|训练集： 0.8750 测试集： 0.7861|"
    ]
   },
   {
